deploy/charts/generated/snowdrop-bot/templates/service.yaml
---
# Source: snowdrop-bot/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowdrop-bot
  labels:
    helm.sh/chart: snowdrop-bot-0.1.0
    app.kubernetes.io/name: snowdrop-bot
    app.kubernetes.io/instance: snowdrop-bot
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: snowdrop-bot
    app.kubernetes.io/instance: snowdrop-bot
